# rf-backend-api

./: .gitignore  LICENSE  README.md  index  log.py  pylama.ini  pyproject.toml
app/: exceptions.py  log.py  models.py  security.py
app/api/: main.py
app/api/routers/: b3.py  b3_router.py  ir.py  login.py
app/b3/: __init__.py  api.py  enums.py  exceptions.py
app/db/: firebase.py  models.py
b3/: __init__.py  api.py  enums.py  exceptions.py  models.py
calc/: __init__.py  darf.py
config/: __init__.py  config.py  config.yml
db/: __init__.py  firebase.py
